[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
tokio = { version = "1.33.0", features = ["full"] }
